2008-06-29  Behdad Esfahbod  <behdad@gnome.org>

	Bug 530255 – GtkAboutDialog cuts off comments label
	Followup patch from  Jan Arne Petersen

	* gtk/gtklabel.c (gtk_label_get_layout_offsets): Ensure layout.

2008-06-28  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkselection.h: properly indent the newly added
	GtkSelectionData accessors. Some newlines can't hurt either.

2008-06-27  Mikael Hallendal  <micke@imendio.com>

	* gtk/gtkbox.c (gtk_box_pack): Removed accidental empty row.

2008-06-27  Mikael Hallendal  <micke@imendio.com>

	* gtk/gtkbox.c (gtk_box_pack, gtk_box_pack_start, gtk_box_pack_end):
	Factored out gtk_box_pack from gtk_box_pack_start and use it from both
	pack_start and pack_end in order to reduce the code duplication.

2008-06-27  Michael Natterer  <mitch@imendio.com>

	Bug 442042 – GtkScaleButton is too limited

	* gtk/gtkscalebutton.c (gtk_scale_button_init): set the name
	"gtk-scalebutton-popup-window" on the popup window so it is
	properly themeable.

2008-06-27  Kristian Rietveld  <kris@imendio.com>

	* gdk/quartz/gdkgeometry-quartz.c:
	* gdk/quartz/gdkwindow-quartz.c:
	* gdk/quartz/gdkprivate-quartz.h: adapt to use GdkWindowImpl
	interface.

2008-06-27  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkrecentmanager.c (get_icon_for_mime_type): Fix two potential
	critical warnings. Bug #539470.

2008-06-27  Emmanuele Bassi  <ebassi@gnome.org>

	Abstract some GdkWindow API into an interface that the backends
	must implement. (based on a patch by Alex Larsson)

	* gdk/Makefile.am: Add gdkwindowimpl.[ch]

	* gdk/gdk.symbols: Move symbols around.

	* gdk/gdkinternals.h:
	* gdk/gdkwindowimpl.[ch]: Move some of the GdkWindow API we require
	from the backends to a GInterface that the backends should implement
	instead.

	* gdk/gdkwindow.c: Provide some of the GdkWindow public API as a
	wrapper call around the GdkWindowImpl interface vtable.

	* gdk/x11/gdkevents-x11.c:
	* gdk/x11/gdkgeometry-x11.c:
	* gdk/x11/gdkprivate-x11.h: